[gd_scene load_steps=4 format=3 uid="uid://dywwkabus6xoo"]

[ext_resource type="Script" path="res://ui/end_scene/end_scene.gd" id="1_3vock"]
[ext_resource type="Texture2D" uid="uid://75lor1ak8wo8" path="res://ui/icon/HatIconRed.png" id="2_i7vx2"]
[ext_resource type="Texture2D" uid="uid://dxpcxa27b6h" path="res://scenes/collectable/shiney/ShinyIcon.png" id="3_ymwkb"]

[node name="EndScene" type="CanvasLayer"]
script = ExtResource("1_3vock")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="BackgroundColour" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0235294, 0.054902, 0.0901961, 1)

[node name="LoseScreen" type="MarginContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="LoseScreen"]
layout_mode = 2
size_flags_vertical = 4

[node name="Label" type="Label" parent="LoseScreen/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 0
text = "Guess the goblins really are a problem..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="LoseScreen/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 10

[node name="HBoxContainer" type="HBoxContainer" parent="LoseScreen/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="LoseRetryButton" type="Button" parent="LoseScreen/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0.964706, 0.909804, 0.803922, 1)
theme_override_colors/font_hover_color = Color(0.964706, 0.909804, 0.803922, 1)
theme_override_colors/font_pressed_color = Color(0.964706, 0.909804, 0.803922, 1)
theme_override_colors/font_focus_color = Color(0.964706, 0.909804, 0.803922, 1)
theme_override_colors/font_color = Color(0.964706, 0.909804, 0.803922, 1)
text = "RETRY"
icon = ExtResource("2_i7vx2")

[node name="LoseMenuButton" type="Button" parent="LoseScreen/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0.964706, 0.909804, 0.803922, 1)
theme_override_colors/font_hover_color = Color(0.964706, 0.909804, 0.803922, 1)
theme_override_colors/font_pressed_color = Color(0.964706, 0.909804, 0.803922, 1)
theme_override_colors/font_focus_color = Color(0.964706, 0.909804, 0.803922, 1)
theme_override_colors/font_color = Color(0.964706, 0.909804, 0.803922, 1)
text = "MENU"
icon = ExtResource("2_i7vx2")

[node name="WinScreen" type="MarginContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="WinScreen"]
layout_mode = 2
size_flags_vertical = 4

[node name="Label" type="Label" parent="WinScreen/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.0235294, 0.054902, 0.0901961, 1)
theme_override_constants/outline_size = 0
text = "Hooray! Now you can wash your dishes."
horizontal_alignment = 1
vertical_alignment = 1

[node name="ShinyContainer" type="MarginContainer" parent="WinScreen/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 30
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="WinScreen/VBoxContainer/ShinyContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="ShinyTextureRect" type="TextureRect" parent="WinScreen/VBoxContainer/ShinyContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_ymwkb")
stretch_mode = 3

[node name="ShinyLabel" type="Label" parent="WinScreen/VBoxContainer/ShinyContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.0235294, 0.054902, 0.0901961, 1)
theme_override_constants/outline_size = 0
text = "You found 0 of 6 shinies!"

[node name="GoblinContainer" type="MarginContainer" parent="WinScreen/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="WinScreen/VBoxContainer/GoblinContainer"]
layout_mode = 2

[node name="GoblinLabel" type="Label" parent="WinScreen/VBoxContainer/GoblinContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.0235294, 0.054902, 0.0901961, 1)
theme_override_constants/outline_size = 0
text = "You left 1 goblin in your yard!"

[node name="ButtonContainer" type="MarginContainer" parent="WinScreen/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 30

[node name="HBoxContainer" type="HBoxContainer" parent="WinScreen/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="WinReplayButton" type="Button" parent="WinScreen/VBoxContainer/ButtonContainer/HBoxContainer"]
layout_mode = 2
text = "REPLAY"
icon = ExtResource("2_i7vx2")

[node name="WinMenuButton" type="Button" parent="WinScreen/VBoxContainer/ButtonContainer/HBoxContainer"]
layout_mode = 2
text = "MENU"
icon = ExtResource("2_i7vx2")
